chore: update PR branch files to align with develop (manual conflict resolution)
Resolves merge conflicts between this PR and develop branch. For each of the
15 servlet files and web.xml changed by this PR, takes develop's more
comprehensive version as the base and incorporates this PR's unique contributions:

- EFormViewForPdfGenerationServlet: preserve XSS fix (Encode.forHtmlAttribute
  on sign URL, CodeQL S5131) + two-pass Letter/signatureValue collection;
  update to develop's IPv6 localhost check and exception handling style
- LoginResourceAction: use develop's URLDecoder + FilenameUtils approach;
  apply PR's 403 (not 400) for SecurityException path validation failures
- GenericDownload: use develop's PathValidationUtils-based transferFile;
  apply PR's ALLOWED_DIR_PROPERTIES allowlist to prevent client-controlled
  filesystem root selection
- web.xml: use develop's filter exclusion list; preserve PR's explicit
  HTTP 500 and java.lang.Throwable error-page mappings (missing in develop)
- All other 11 servlet files: take develop's versions directly (strictly
  better: IPv6 checks, PathValidationUtils, MiscUtils.sanitizeFileName,
  ALLOWED_HOMEPATH_KEYS, LogSanitizer, comprehensive JavaDoc, @Override)
- CLAUDE.md: sync wording to develop's version

Co-authored-by: Michael Yingbull <yingbull@users.noreply.github.com>